--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   		}
 		
 		else if(trigger==2){
-		window.open("file:///C:/Users/john/Desktop/resume.html","_self");
+		window.open("resume.html","_self");
 		}
 	}
 	//warning();
