--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
 
 	<style>
 		body{
-		 background-image: url("http://img1.3lian.com/img2012/2/0226/38/d/73.jpg");
+		<!-- background-image: url("http://img1.3lian.com/img2012/2/0226/38/d/73.jpg");-->
       		 background-repeat:no-repeat;
 
    		 background-size:cover;
