--- a/code area.html
+++ b/code area.html
@@ -75,21 +75,13 @@ alert("sorry, this function is not complete, yet &_% . author is now analyzing a
 //warning();
 </script>
 
-<pre><strong>
-yes, this function is not yet done...   <img id="doge" src="https://static.mengniang.org/common/thumb/7/71/%E6%BB%91%E7%A8%BD%E8%A1%A8%E6%83%85.jpg/250px-%E6%BB%91%E7%A8%BD%E8%A1%A8%E6%83%85.jpg" alt="doge"  >
-i know...
-i am tring...
-i only learn html for 1,2 weeks so far...
-too many school work...
-too many things to learn...
-too busy with my life...
-no code is published in github, so
-you have to wait...
-be patient...
+<p align=center><strong>
 
+	COMING SOON.
+	
 </strong>
 
-</pre>
+</p>
 
 
 
