--- a/code area.html
+++ b/code area.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <h1><strong>CODE</strong></h1>
     <style>
+	#info{
+	text-align:center;
+	font-size:30px;
+	font-weight:900;
+	margin:30;
+	}
 	h1{
 	text-align:center;
 	}
@@ -75,7 +81,7 @@ alert("sorry, this function is not complete, yet &_% . author is now analyzing a
 //warning();
 </script>
 
-<p align=center><strong>
+<p id="info"><strong>
 
 	COMING SOON.
 	
