--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
 		JZ's resume
 	</title>
 	
-	<h1> jz's resume </h1>
+	<h1> JZ's resume </h1>
 
 
 	<style>
@@ -58,7 +58,7 @@
 		.tooltip .lastinfo {
     		visibility: hidden;
     		width: 300px;
-    		background-color: #00FFFF;
+    		background-color: black;
     		color: white;
     		text-align: center;
     		border-radius: 6px;
