--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
 
 	<style>
 		body{
-		<!-- background-image: url("http://img1.3lian.com/img2012/2/0226/38/d/73.jpg");-->
+		 background-image: url("http://www.17sucai.com/upload/55/2013-05-19/07adc9fcf230501379f0ad12172b3b56.jpg");
       		 background-repeat:no-repeat;
 
    		 background-size:cover;
