--- a/resume.html
+++ b/resume.html
@@ -82,7 +82,7 @@
 <p id="adress">63 Tyler Street, Buffalo, NY, 14214</p>
 <hr><br><br>
 <p class="subhead">OBJECT</p>
-<p style="font-size:20px;">-Looking for an internship/job, and hope to learn thought the work<span class="tooltip">[+]<span class="lastinfo"> just a way to prove myself</span></span></p><br>
+<p style="font-size:20px;">-Looking for an internship/job, and hope to learn thought the work<span class="tooltip">[+]<span class="lastinfo"> just a way to improve myself</span></span></p><br>
 <p class="subhead">EDUCATION</p>
 <ul>
  <li >Fort Hamilton High School <span class="tooltip">[+]<span class="lastinfo"> <a href="http://www.fthhs.org/apps/pages/index.jsp?uREC_ID=384569&type=d&pREC_ID=874224" style="color:white;">link to my high school's main page</a></span></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;graduate 2015<p>Academic Certificate</p><p>GPA: 95.3/100</p></li>
