--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 	<script>
 	function warning(){
-	setTimeout(function(){
-	alert("click the black part the web will transfer you to the place where all my code will be post. click the white part, the web will transfer you to the place  will my resume is posted");
-	},1000);
+	
+	alert("click the black part---my coding area. click the white ---my resume");
+
 	}
 
 	function openCode(trigger) {
