--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		window.open("resume.html","_self");
 		}
 	}
-	//warning();
+	warning();
 	document.getElementById("l1").addEventListener('click',function(){openCode(1)},true);	
 	document.getElementById("r1").addEventListener('click',function(){openCode(2)},true);
 	</script>
