--- a/resume.html
+++ b/resume.html
@@ -79,14 +79,14 @@
 
 <p id="name">JIANZHAO</p>
 <p id="contact">3477053302|jianzhao@buffalo.edu</p>
-<p id="adress">63 Tyler Street, Buffalo, NY, 14214</p>
+<p id="adress">4125 Bailey Avenue, Buffalo, NY, 14226</p>
 <hr><br><br>
 <p class="subhead">OBJECT</p>
 <p style="font-size:20px;">-Looking for an internship/job, and hope to learn thought the work<span class="tooltip">[+]<span class="lastinfo"> please, give me a chance. i am awesome</span></span></p><br>
 <p class="subhead">EDUCATION</p>
 <ul>
  <li >Fort Hamilton High School <span class="tooltip">[+]<span class="lastinfo"> <a href="http://www.fthhs.org/apps/pages/index.jsp?uREC_ID=384569&type=d&pREC_ID=874224" style="color:white;">link to my high school's main page</a></span></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;graduate 2015<p>Academic Certificate</p><p>GPA: 95.3/100</p></li>
- <li >University at Buffalo, The State University of New York <span class="tooltip">[+]<span class="lastinfo"> <a href="https://www.buffalo.edu/home/multimedia/photogalleries.html" style="color:white;">link to my college</a></span></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;anticipated fall 2015<p>Bachelor of Science, computer science, expected June, 2019</p><p>Overall GPA:3.702/4.0</p>
+ <li >University at Buffalo, The State University of New York <span class="tooltip">[+]<span class="lastinfo"> <a href="https://www.buffalo.edu/home/multimedia/photogalleries.html" style="color:white;">link to my college</a></span></span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;anticipated fall 2015<p>Bachelor of Science, computer science, expected June, 2019</p><p>Overall GPA:3.788/4.0</p>
 </ul><br>
 <p class="subhead">SKILL</p>
 <ul>
