--- a/index.html
+++ b/index.html
@@ -35,11 +35,7 @@
 	</div>
 
 	<script>
-	function warning(){
 	
-	alert("click the black part---my coding area. click the white ---my resume");
-
-	}
 
 	function openCode(trigger) {
  		if(trigger==1){
@@ -47,7 +43,7 @@
   		}
 		
 		else if(trigger==2){
-		window.open("resume.html","_self");
+		window.open("code%20area.html","_self");
 		}
 	}
 	warning();
