--- a/code area.html
+++ b/code area.html
@@ -81,6 +81,8 @@ alert("sorry, this function is not complete, yet &_% . author is now analyzing a
 //warning();
 </script>
 
+	<a href=ftp://www.mydomain.com/path/my app.apk> download the app </a>
+	<!--
 <p id="info"><strong>
 
 	COMING SOON.
@@ -88,7 +90,7 @@ alert("sorry, this function is not complete, yet &_% . author is now analyzing a
 </strong>
 
 </p>
-
+-->
 
 
 
