--- a/code area.html
+++ b/code area.html
@@ -73,21 +73,7 @@
 <!--more information(code) will be add in here-->
 </table>
 
-<script>
-function warning(){
-alert("sorry, this function is not complete, yet &_% . author is now analyzing all his code and trying to upload all his code as soon as possible. However, it probably cannot be done untill the end of the summer vecation because too many school work need to be done and too many things to study *_*");
-}
-
-//warning();
-</script>
-
-<p id ="info"><strong>
-
-	COMING SOON.
-
-</strong>
-
-</p>
+<a href=C:\Users\john\Desktop\Habit-Rabbit\app\build\outputs\apk\debug\app-debug.apk> download the app </a>
 
 
 
