--- a/code area.html
+++ b/code area.html
@@ -75,7 +75,7 @@
 
 
 
-	<a href=C:\Users\john\Desktop\Habit-Rabbit\app\build\outputs\apk\debug\app-debug.apk> download the app </a>
+	<a href=file:///C:\Users\john\Desktop\Habit-Rabbit\app\build\outputs\apk\debug\app-debug.apk> download the app </a>
 	<!--
 <p id="info"><strong>
 
