--- a/code area.html
+++ b/code area.html
@@ -73,7 +73,7 @@
 <!--more information(code) will be add in here-->
 </table>
 
-<a href=C:\Users\john\Desktop\Habit-Rabbit\app\build\outputs\apk\debug\app-debug.apk> download the app </a>
+<a href=file:///C:\Users\john\Desktop\Habit-Rabbit\app\build\outputs\apk\debug\app-debug.apk> download the app </a>
 
 
 
